--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -686,6 +686,31 @@
 			"options": {
 				"cwd": "${workspaceFolder}"
 			}
+		},
+		{
+			"label": "Create New Example",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"run",
+				"--project",
+				"${workspaceFolder}/tools/SokolApplicationBuilder",
+				"--",
+				"--task",
+				"create",
+				"--project",
+				"${input:newExampleName}"
+			],
+			"group": "build",
+			"problemMatcher": "$msCompile",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			}
 		}
 	],
 	"inputs": [
@@ -802,6 +827,12 @@
 				"debug"
 			],
 			"default": "release"
+		},
+		{
+			"id": "newExampleName",
+			"type": "promptString",
+			"description": "Enter the name for the new example (alphanumeric and underscore only, must start with letter)",
+			"default": "my_example"
 		}
 	]
 }
