Add 'Create New Project' feature with template_app
- New CreateProjectTask.cs: Creates standalone projects outside repository
  - Validates project name and destination path
  - Ensures destination is outside Sokol.NET repository
  - Copies template_app structure
  - Copies imgui and sokol bindings from src/ (single source of truth)
  - Updates launch.json and tasks.json in destination

- New template_app: Project template with full structure
  - Pre-configured .vscode (launch.json, tasks.json, settings.json)
  - Assets folder with logo files
  - Shaders folder for GLSL files
  - Source folder with Program.cs and template-app.cs
  - Desktop and Web .csproj files
  - wwwroot for WebAssembly deployment

- VS Code task: 'Create New Project' with name and destination prompts

- Documentation:
  - New docs/CREATE_PROJECT.md: Comprehensive project creation guide
  - Updated README.md: Added project creation section and doc link
  - Updated docs/README.md: Added CREATE_PROJECT.md to index

- Options.cs: Added --destination parameter
- Program.cs: Added 'createproject' task handler

Projects are created with latest imgui/sokol bindings from src/

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -736,6 +736,33 @@
 				"showReuseMessage": true,
 				"clear": false
 			}
+		},
+		{
+			"label": "Create New Project",
+			"type": "shell",
+			"command": "dotnet",
+			"args": [
+				"run",
+				"--project",
+				"${workspaceFolder}/tools/SokolApplicationBuilder",
+				"--",
+				"--task",
+				"createproject",
+				"--project",
+				"${input:newProjectName}",
+				"--destination",
+				"${input:projectDestination}"
+			],
+			"group": "build",
+			"problemMatcher": "$msCompile",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			}
 		}
 	],
 	"inputs": [
@@ -900,6 +927,18 @@
 				"mrt",
 				"GltfViewer"
 			]
+		},
+		{
+			"id": "newProjectName",
+			"type": "promptString",
+			"description": "Enter the name for the new project (alphanumeric and underscore only, must start with letter)",
+			"default": "my_project"
+		},
+		{
+			"id": "projectDestination",
+			"type": "promptString",
+			"description": "Enter the destination path (must be outside this repository)",
+			"default": "${env:HOME}/Projects"
 		}
 	]
 }
