Add cross-platform device listing task
- Implemented ListDevicesTask.cs for Android/iOS device listing
- Replaced shell scripts with C# implementation using CliWrap
- Android: Lists connected devices with model/manufacturer info via adb
- iOS: Lists physical devices (ios-deploy) and simulators (xcrun simctl)
- Updated VS Code tasks.json for main repo and template_app
- Added comprehensive DEVICE_LISTING.md guide
- Updated docs/README.md with new Device Management section
- Works on Windows, macOS, and Linux
- Better error handling and troubleshooting messages

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -495,13 +495,35 @@
 			"label": "Android: List Devices",
 			"type": "shell",
 			"group": "build",
-			"command": "${workspaceFolder}/scripts/list-android-devices.sh"
+			"command": "dotnet",
+			"args": [
+				"run",
+				"--project",
+				"${workspaceFolder}/tools/SokolApplicationBuilder",
+				"--",
+				"--task",
+				"listdevices",
+				"--architecture",
+				"android"
+			],
+			"problemMatcher": []
 		},
 		{
 			"label": "iOS: List Devices",
 			"type": "shell",
 			"group": "build",
-			"command": "${workspaceFolder}/scripts/list-ios-devices.sh"
+			"command": "dotnet",
+			"args": [
+				"run",
+				"--project",
+				"${workspaceFolder}/tools/SokolApplicationBuilder",
+				"--",
+				"--task",
+				"listdevices",
+				"--architecture",
+				"ios"
+			],
+			"problemMatcher": []
 		},
 		{
 			"label": "macOS: Build App Bundle",
