Add JoltPhysics demo with multithreading and GPU instancing
- Implemented JoltPhysics integration with 10,000 dynamic bodies (5,000 cubes + 5,000 spheres)
- Added GPU instancing for efficient rendering (2 draw calls for 10,000 objects)
- Configured multithreading with JobSystemThreadPool (desktop/mobile)
- WebAssembly support with NativeAOT compilation
- Added comprehensive README.md with build instructions and performance details
- Platform support: Desktop, Web, Android, iOS
- Release mode recommended for optimal performance

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,7 @@
             "type": "pickString",
             "description": "Select an example to launch",
             "options": [
+                "JoltPhysics",
                 "bepuphysics",
                 "cube",
                 "dyntex",
