--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,7 @@
             "type": "pickString",
             "description": "Select an example to launch",
             "options": [
+                "box2dPhysics",
                 "JoltPhysics",
                 "bepuphysics",
                 "cube",
