--- a/.github/workflows/build-sokol-tools.yml
+++ b/.github/workflows/build-sokol-tools.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
-  workflow_dispatch:  # Allow manual triggering
+  workflow_dispatch:  # Allow manual triggering from GitHub Actions tab
 
 # Required permissions for private repositories
 permissions:
