--- a/.github/workflows/build-sokol-tools.yml
+++ b/.github/workflows/build-sokol-tools.yml
@@ -69,6 +69,12 @@ jobs:
           echo "Changed files in this commit:"
           echo "$CHANGED_FILES"
           
+          # Check if the workflow itself changed (rebuild to ensure consistency)
+          if echo "$CHANGED_FILES" | grep -q "^.github/workflows/build-sokol-tools.yml$"; then
+            echo "build-sokol-tools.yml workflow changed - rebuilding"
+            SHOULD_BUILD=true
+          fi
+          
           # Check if tools/sokol-tools appears as a changed file (submodule update)
           if echo "$CHANGED_FILES" | grep -q "^tools/sokol-tools$"; then
             echo "sokol-tools submodule updated"
