new sample instancing_compute A GPU-accelerated particle system using compute shaders to update particle physics and hardware instancing to render up to 512K particles. Demonstrates compute-to-graphics pipeline integration where storage buffers serve dual purpose as both compute shader output and vertex shader input.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,7 @@
             "type": "pickString",
             "description": "Select an example to launch",
             "options": [
+                "instancing_compute",
                 "computeboids",
                 "box2dPhysics",
                 "JoltPhysics",
