Fix iOS bundle identifiers: sanitize underscores and use configurable prefix

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ bin/
 ext/ozz-animation/bin/*
 !ext/ozz-animation/bin/emscripten/
 obj/
+examples/*/ios/
+examples/*/android/
+!examples/*/shaders/compiled/ios/
+!examples/*/shaders/compiled/android/
