--- a/tools/SokolApplicationBuilder/templates/ios/Info.plist
+++ b/tools/SokolApplicationBuilder/templates/ios/Info.plist
@@ -5,7 +5,7 @@
     <key>CFBundleName</key>
     <string>TEMPLATE_PROJECT_NAME</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.TEMPLATE_PROJECT_NAME</string>
+    <string>TEMPLATE_BUNDLE_PREFIX.TEMPLATE_PROJECT_NAME</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>CFBundleExecutable</key>
