Add ShaderToyApp example - Multi-shader gallery with 7 ShaderToy-inspired fragment shaders

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,7 @@
             "type": "pickString",
             "description": "Select an example to launch",
             "options": [
+                "ShaderToyApp",
                 "instancing_compute",
                 "computeboids",
                 "box2dPhysics",
